--- a/src/components/common/Paginator/paginator.module.css
+++ b/src/components/common/Paginator/paginator.module.css
@@ -25,6 +25,7 @@
     border: none;
     letter-spacing: 4px;
     font-weight: bold;
+    font-size: 16px;
     /*width:60px;*/
     cursor: pointer;
 }
