--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,14 +1,9 @@
-.header{
-    grid-area: h;
-    background-color: cornflowerblue;
 
-}
-.header img{
-    width: 60px;
-}
 .loginBlock
 {
-    float: right;
+    width: 100%;
+    left: 10%;
+    color:white;
 }
 .loginBlock a{
     color: white;
